@@ -34,7 +34,7 @@ class RateList(list):
         count_dic.update(dict(count_list))
 
         for rate, total_in_this in count_dic.items():
-            rate_info = Rate(rate, total_in_this, self.total, weight)
+            rate_info = FSpotRate(rate, total_in_this, weight)
             self.raw_list.append(rate_info)
 
         self._set_random_weight()
@@ -58,16 +58,16 @@ class RateList(list):
         rate = self.random()
         return rate
 
-class Rate(object):
+class FSpotRate(object):
 
-    def __init__(self, rate, total_in_this, total_all, weight_mag=2):
-        self.name = rate
-        self.total = total_in_this
-        self.total_all = total_all
-        self.weight_mag = weight_mag
+    def __init__(self, name, total, option=None):
+        self.name = name
+        self.total = total
+        self.option = option
 
     def _get_weight(self):
-        weight = self.total / self.total_all * (self.name * self.weight_mag + 1)
+        weight_mag = self.option or 2
+        weight = self.total * (self.name * weight_mag + 1)
         return weight
 
     weight = property(_get_weight, None)
