@@ -2,11 +2,13 @@ import re
 import copy
 # import pprint
 
+import numpy
 import feedparser
 from gettext import gettext as _
 
 from base import *
 from ..utils.iconimage import LocalIconImage
+from ..utils.wrandom import WeightedRandom
 
 def info():
     return [RSSPlugin, RSSPhotoList, PhotoSourceRSSUI]
@@ -20,13 +22,17 @@ class RSSPlugin(PluginBase):
 class RSSPhotoList(PhotoList):
 
     def prepare(self):
-        self.photos = []
+        self.photos = {}
 
         url = self.argument
         self._get_url_with_twisted(url)
 
         interval_min = self.conf.get_int('plugins/rss/interval', 60)
         self._start_timer(interval_min)
+
+    def _random_choice(self):
+        rate = self.random()
+        return random.choice(self.photos[rate.name])
 
     def _prepare_cb(self, data):
         rss = feedparser.parse(data)
@@ -65,7 +71,32 @@ class RSSPhotoList(PhotoList):
 
                 photo = Photo()
                 photo.update(data)
-                self.photos.append(photo)
+
+                if owner not in self.photos:
+                    self.photos[owner] = []
+
+                self.photos[owner].append(photo)
+
+        self.raw_list = []
+
+        num_list = [len(self.photos[i]) for i in self.photos]
+        mean = numpy.mean(num_list)
+        std = numpy.std(num_list)
+
+        for title in self.photos:
+            total_in_this = len(self.photos[title])
+            # print title, total_in_this
+            rate_info = RSSRate(title, total_in_this, mean, std)
+            self.raw_list.append(rate_info)
+
+        self.random = WeightedRandom(self.raw_list)
+
+class RSSRate(object):
+
+    def __init__(self, name, total, mean, std):
+        self.name = name
+        std_score = 20 * (total - mean) / std + 50
+        self.weight = std_score if std_score >= 1 else 1
 
 class PhotoSourceRSSUI(PhotoSourceUI):
 
