@@ -1,3 +1,12 @@
+2010-05-26  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* rss.py: Added support weighted random with standard scores.
+
+2010-05-25  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* rss.py: Added support weighted random for each rss feed in mixed
+	  rss feeds.
+
 2010-05-24  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* actors.py, base.py, picasa.py: Added support for EXIF tooltips.
